# chipst8

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: chipst8.rs  main.rs
src/lib/: Point.svelte
