[package]
name = "chipst8"
version = "1.0.0"
description = "A Chip8 emulator written by Rust and Tauri"
authors = ["YbJerry"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.4"
tauri-plugin-dialog = "2.0.0-beta.4"
parking_lot = "0.12.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
